# majsoul-auto-rating

./: .gitignore  README.md  capture_access_token.py  majsoul_recent_paipu.py  majsoul_recent_rating.py  majsoul_to_mjai.py  mortal_review.py  mortal_runtime.py  pyproject.toml  requirements.txt  setup.py  test_majsoul_to_mjai.py  test_mortal_review.py  test_mortal_runtime.py  test_recent_paipu_fetcher.py  test_recent_rating.py  test_recent_rating_offline.py
majsoul/: __init__.py  client.py  exceptions.py  utils.py
majsoul/proto/: __init__.py  liqi_pb2.py
majsoul_auto_rating/: __init__.py  auth.py  mjai.py  onnx_engine.py  publish.py  publish_oss.py  recent_paipu.py  recent_rating.py  report.py  review.py  runtime.py  tenhou_raw.py
majsoul_auto_rating/data/: README.md
tests/: test_mjai_conversion.py  test_publish.py  test_recent_paipu.py  test_recent_rating_offline.py  test_report.py  test_runtime_checkpoint.py  test_runtime_paths.py
tools/: __init__.py  _io.py  convert_record_to_mjai.py  export_mortal_onnx.py  export_review_report.py  fetch_game_record.py  publish_review_report.py  query_recent_paipu.py  query_recent_rating.py  review_mjai_log.py  runtime_smoke.py
