[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "majsoul-auto-rating"
version = "0.1.0"
description = "Core library and tools for Mahjong Soul recent-rating review"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "aiohttp>=3.13,<4",
  "numpy>=2,<3",
  "protobuf>=6.33.3,<7",
  "toml>=0.10,<1",
  "torch>=2.9,<3",
  "websockets>=15,<16",
]

[project.optional-dependencies]
test = [
  "pytest>=8.3,<9",
  "pytest-asyncio>=0.24,<1",
]
tools = [
  "playwright>=1.50,<2",
]

[tool.setuptools]
packages = ["majsoul", "majsoul.proto", "majsoul_auto_rating"]
include-package-data = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
